name:                ScenarioReasoner
version:             4.1.0
author:              Ideas Authors <authors@ideas.example>
                     jan709 <j.vandieren@students.uu.nl>
                     Johan Jeuring <J.T.Jeuring@uu.nl>
                     Jordi Vermeulen <cloud_strife559@hotmail.com>
                     Jordy van Dortmont <ydroj@live.nl>
                     Marcell van Geest <marcell@marcell.nl>
                     prof1990 <prof1990@hotmail.com>
                     Tom Bakker <tomsterb@live.nl>
                     Wouter <wouter.cs@gmail.com>
                     Wouter Florijn <woutermflorijn@gmail.com>
maintainer:          Jordy van Dortmont <ydroj@live.nl>
                     Marcell van Geest <marcell@marcell.nl>
copyright:           (c) 2013-2016 Utrecht University
license:             Apache-2.0
license-file:        LICENSE.txt
category:            Education
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3

-------------------------------------------------------------------------------

executable ScenarioReasoner.cgi
  Main-is:             ScenarioReasoner.hs
  ghc-options:        -Wall -O2 -fno-warn-orphans
  hs-source-dirs:      src
  default-language:    Haskell2010

  build-depends:       base >= 4.8 && < 5,
                       ideas == 1.5,
                       cgi >= 3001.3.0.0,
                       transformers,
                       containers,
                       filepath,
                       binary,
                       filemanip

executable ScenarioParser.cgi
  Main-is:             ScenarioParser.hs
  ghc-options:        -Wall -O2 -fno-warn-orphans
  hs-source-dirs:      src
  default-language:    Haskell2010

  build-depends:       base >= 4.8 && < 5,
                       ideas >= 1.5,
                       cgi >= 3001.3.0.0,
                       transformers,
                       containers,
                       filepath,
                       binary,
                       filemanip
