cabal-version:       2.4
name:                ScenarioReasoner
version:             6.0.0
author:              Ideas Authors <authors@ideas.example>
                     jan709 <j.vandieren@students.uu.nl>
                     Johan Jeuring <J.T.Jeuring@uu.nl>
                     Jordi Vermeulen <cloud_strife559@hotmail.com>
                     Jordy van Dortmont <jordy@jordyvandortmont.com>
                     Marcell van Geest <marcell@marcell.nl>
                     prof1990 <prof1990@hotmail.com>
                     Tom Bakker <tomsterb@live.nl>
                     Wouter <wouter.cs@gmail.com>
                     Wouter Florijn <woutermflorijn@gmail.com>
maintainer:          Jordy van Dortmont <jordy@jordyvandortmont.com>
                     Marcell van Geest <marcell@marcell.nl>
copyright:           (c) 2013-2017 Utrecht University
license:             Apache-2.0
license-file:        LICENSE.txt
category:            Education
build-type:          Simple
tested-with:         GHC == 8.6.5

-------------------------------------------------------------------------------

executable ScenarioReasoner.cgi
  Main-is:             ScenarioReasoner.hs
  ghc-options:        -Wall -Wno-orphans
  hs-source-dirs:      src
  default-language:    Haskell2010

  build-depends:       base >= 4.12 && < 5,
                       ideas == 1.8,
                       transformers,
                       containers,
                       filepath,
                       binary,
                       filemanip

  other-modules:       Domain.Scenarios.Condition
                       Domain.Scenarios.DomainData
                       Domain.Scenarios.Exercises
                       Domain.Scenarios.Expression
                       Domain.Scenarios.Globals
                       Domain.Scenarios.Scenario
                       Domain.Scenarios.ScenarioState
                       Domain.Scenarios.Services.AdaptedServices
                       Domain.Scenarios.Services.ExtraServices
                       Domain.Scenarios.Services.ServiceList
                       Domain.Scenarios.Services.Types
                       Domain.Scenarios.Strategy

executable ScenarioParser
  Main-is:             ScenarioParser.hs
  ghc-options:        -Wall -Wno-orphans
  hs-source-dirs:      src
  default-language:    Haskell2010

  build-depends:       base >= 4.12 && < 5,
                       ideas == 1.8,
                       transformers,
                       containers,
                       filepath,
                       binary

  other-modules:       Domain.Scenarios.Condition
                       Domain.Scenarios.DomainData
                       Domain.Scenarios.Expression
                       Domain.Scenarios.Globals
                       Domain.Scenarios.Parser
                       Domain.Scenarios.Scenario
                       Domain.Scenarios.ScenarioState
